--- a/1jecc/pasatiempos_practica3/estilos.css
+++ b/1jecc/pasatiempos_practica3/estilos.css
@@ -66,3 +66,26 @@
     margin-left: 500px;
     margin-right: 600px;
 }
+
+.caja_sombreada_titulos_p{
+    padding: 20px;
+    border-radius: 8px;
+    background-color: rgb(0, 0, 0);
+    box-shadow: 0 4px 8px rgba(10, 10, 10, 10.9);
+    color: #ffffff;
+    margin-bottom: 20px;
+    font-size: 30px;
+    text-align: center;
+
+}
+
+.caja_sombreada_pelicula{
+    padding: 20px;
+    border-radius: 8px;
+    background-color: rgb(226, 241, 157);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
+    color: #000000;
+    margin-bottom: 20px;
+    width: 1470px;
+    height: 800px;
+}
