--- a/F-rn-ndo/pasatiemposv2/secciones/estilo_secciones.css
+++ b/F-rn-ndo/pasatiemposv2/secciones/estilo_secciones.css
@@ -47,7 +47,7 @@
     font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
-    background: url("images/fondo.jpg") no-repeat center center fixed;
+    background: url("images/programar.jpg") no-repeat center center fixed;
     background-size: cover;
     color: #ffffff;
     text-align: center;
@@ -102,6 +102,16 @@ img {
     margin-top: 30px;
     font-size: 0.9em;
 }
+
+.video {
+    position: relative;
+    margin: 30px 0;
+    padding: 20px;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
+    border: 1px solid rgba(73, 73, 73, 0.2);
+}
+
 /* CSS para articulos (parecido al de secciones solo que con diferentes sentencias)*/
 
 /* Estilo base para articulo */
