--- a/victoriabalderas/pasatiemposver2/estilos.css
+++ b/victoriabalderas/pasatiemposver2/estilos.css
@@ -1,10 +1,10 @@
 body {
-    background-color: antiquewhite;
+    background-color: rgb(255, 255, 255);
 }
 
 h1 {
-    color: rgb(134, 107, 71);
-    background-color: rgba(224, 191, 150, 0.603);
+    color: rgb(221, 207, 217);
+    background-color: rgb(202, 150, 167);
     font-family: 'Franklin Gothic Medium';
     font-size: 50px;
 }
