--- a/oswtobias06/pasatiempos2/estilos.css
+++ b/oswtobias06/pasatiempos2/estilos.css
@@ -16,7 +16,7 @@ h3 {
 }
 
 address {
-    border: 5px ridge black;
+    border: 5px ridge #6F8695;
 }
 
 .parraf {
@@ -47,4 +47,21 @@ aside {
     position: absolute;
     right: 90px;
     top: 150px; 
+}
+
+.audio {
+    width: 500px;
+    
+}
+
+form {
+    width: 200px;
+}
+
+.back {
+    border: 1px solid #05204A;
+    background-color: #05204A;
+    color: #F4FDFF;
+    border-radius: 20px;
+    padding: 10px;
 }
