--- a/oswtobias06/pasatiempos2/estilos.css
+++ b/oswtobias06/pasatiempos2/estilos.css
@@ -20,6 +20,7 @@ address {
 }
 
 .parraf {
+            color: black;
             background-color: #F4FDFF;
             padding: 20px;
             border: 1px solid #6F8695;
