--- a/jesuscruz125/pasatiemposv2/estilosp2.css
+++ b/jesuscruz125/pasatiemposv2/estilosp2.css
@@ -41,3 +41,24 @@ header .volver {
     margin: 0;
     font-size: 0.9rem;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    border: 2px solid black;
+    text-align: center;
+    padding: 8px;
+}
+
+header nav ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    gap: 20px;
+    padding: 0;
+    margin: 0;
+}
+
