--- a/AlejandroRmzEsc/assets/css/styles.css
+++ b/AlejandroRmzEsc/assets/css/styles.css
@@ -4,16 +4,18 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 
 header{
     padding: 10px 0px 10px 15px;
     width: 100%;
-    height: 100px;
+    height: 150px;
     color: lightgrey;
     display: grid;
     place-items: center;
-    font-size: 30px;
+    font-size: 40px;
     text-shadow: -3px 13px 11px rgba(206,66,245,0.83);
 }
 .content{
@@ -21,20 +23,22 @@ header{
     display: flex;
     justify-content: center;
     max-width: 70%;
-    background-color: gray;
     align-items: center;
     flex-wrap: wrap;
     align-content: space-evenly;
     gap: 30px;
 }
 .evidencia{
-    border:  5px solid #fff;
+    color: lightgray;
+    border:  1px solid #fff;
     border-radius: 10px;
     width: 40%;
+    box-shadow: -3px 13px 11px rgba(206,66,245,0.83);
+    min-height: 400px;
 }
 
 .opcion {
-    height: 100 vh;
+    height: 10vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -46,7 +50,7 @@ a{
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     color: lightgray;
-    font-size: 10px;
+    font-size: 15px;
     letter-spacing: .5px;
     padding: 0 10px;
 }
@@ -69,9 +73,3 @@ a:hover{
 a:hover:after{
     width: 100%;
 }
-/*.evidencia{
-    width: 500px;
-    height: 500 px;
-    border-color: red;
-    color: #ffffff;
-}*/
