--- a/aaronrdzr/paginaweb2/estilos.css
+++ b/aaronrdzr/paginaweb2/estilos.css
@@ -33,7 +33,7 @@ address{
 }
 
 p{
-    border: 10px whitesmoke;
+    border: 10px solid whitesmoke;
     color: black; 
     background-color: whitesmoke;
     width: auto;
@@ -54,4 +54,46 @@ h3{
   color: black;   
   font-size: 16px;     
   font-weight: lighter;
+}
+
+.hobbies{
+  text-align: center;
+  border: 15px solid rgb(0, 2, 128);
+  color: white;
+  background-color: rgb(0, 2, 128);
+  width: 250px;
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: 20px;
+  padding: 10px;
+}
+
+.hobbies ul{
+  list-style: square;
+  padding: 0;
+  margin: 0;
+
+}
+
+input[type="menulist"] {
+  appearance: menulist;
+  width: 20px;
+  height: 20px;
+  border: 2px solid blue;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+  margin-right: 10px;
+  position: relative;
+}
+
+input[type="menulist"]:checked::before {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 8px;
+  height: 8px;
+  background: #555;
+  border-radius: 50%;
 }
