--- a/victoriabalderas/pasatiemposver2/estilos.css
+++ b/victoriabalderas/pasatiemposver2/estilos.css
@@ -94,3 +94,10 @@ li {
     font-family: 'Lucida sans';
     color: rgb(133, 6, 112);
 }
+
+.imgpeliculas {
+    display: flex;
+    justify-content: center;
+    width: 200px;
+    height: 300px;
+}
