--- a/KingBootleg/PasatiemposVer2/estilos.css
+++ b/KingBootleg/PasatiemposVer2/estilos.css
@@ -11,6 +11,8 @@ h1 {
     text-align: center;
     color: #6a5acd;
     margin-bottom: 20px;
+    border: 2px solid #4682b4;
+    padding: inline-block;
 }
 
 
