--- a/Marikve7/style.css
+++ b/Marikve7/style.css
@@ -1,7 +1,7 @@
 #a18 {
     background-color: plum;
     color: rgb(200, 0, 218);
-    border: 2px solid purple;
-    font-size: 14px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border: 3px dotted purple;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
 }
