--- a/ErickLTI/boton_index/boton_index.css
+++ b/ErickLTI/boton_index/boton_index.css
@@ -5,4 +5,6 @@
     font-family: 'Times New Roman', Times, serif;
     border-radius: 10px;
     text-align: center;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
