--- a/RdeReimer/pasaTimepoVer2/styles.css
+++ b/RdeReimer/pasaTimepoVer2/styles.css
@@ -51,3 +51,14 @@ footer{
 .mtb{
     color: orange;
 }
+
+.RdeReimerLink{
+    text-decoration: none;
+    color: white;
+    border: 2px solid aqua;
+    border-radius: 10px;
+}
+
+.RdeReimerLink:hover{
+    size: 110%;
+}
