--- a/RdeReimer/StylesGlobal.css
+++ b/RdeReimer/StylesGlobal.css
@@ -24,4 +24,5 @@ background-color:  rgb(124, 124, 124);
 #a19 a:hover {
     color: rgb(0, 255, 255);
     font-weight: 500;
+    text-shadow: 0px 0px 0px aqua;
 }
