--- a/RdeReimer/StylesGlobal.css
+++ b/RdeReimer/StylesGlobal.css
@@ -6,10 +6,14 @@ border-radius: 10px;
 width: fit-content;
 margin: 20px 0;
 box-shadow: 0px 1px 10px 1px rgb(124, 124, 124); 
+transition: 
+    transform 0.3s ease,
+    background-color 0.3s ease,
+    border-color 0.3s ease;
 }
+
 #a19:hover {
 transform: scale(1.1);
-transition: transform 1ms ease-out;
 border: 5px solid rgb(0, 255, 255);
 background-color:  rgb(124, 124, 124);
 }
