--- a/Hugo-0699/CSS/estilos.css
+++ b/Hugo-0699/CSS/estilos.css
@@ -3,7 +3,7 @@
     border: 5px double black;
     border-radius: 10px;
     padding: 5px 20px;
-    background-color:rgb(56, 47, 47);
+    background-color:rgb(71, 57, 57);
     color:white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 15px;
@@ -13,4 +13,5 @@
 #a44 {
     list-style: none;
     margin-top: 15px;
+    margin-bottom: 15px;
 }
