--- a/diegoalgosa/css/estilos2.css
+++ b/diegoalgosa/css/estilos2.css
@@ -1,12 +1,13 @@
 #a15 {
-    display: inline-block;
+    width: 6rem;
     border: 5px groove rgb(0, 247, 255);
     background-color: rgb(1, 43, 80);
     padding: 5px 10px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    list-style: none;
 }
 
 #a15 a {
-    color: rgb(0, 0, 0);
+    color: white;
 }
