--- a/ernesgarcia06/css/estilos.css
+++ b/ernesgarcia06/css/estilos.css
@@ -1,8 +1,8 @@
 #a16 {
-    display: inline-block;
     border: 5px groove gray;
     background-color: rgb(43, 156, 255);
-    padding: 5px 10px;
+    padding: 5px 15px;
+    width: 120px;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
 }
