--- a/Marikve7/pasatiempos2/estilo.css
+++ b/Marikve7/pasatiempos2/estilo.css
@@ -9,8 +9,8 @@ section, nav {
     background-color: rgb(231, 215, 231);
 }
 
-h3 {
-    color: rgb(109, 4, 109);
+#n01 * {
+    color: rgb(146, 21, 146);
 }
 
 img {
