--- a/oswtobias06/pasatiempos2/estilos.css
+++ b/oswtobias06/pasatiempos2/estilos.css
@@ -1,6 +1,20 @@
+/*Selector universal*/
+* {
+    margin: 10;
+}
+
+/* Selector de tipo*/
 body {
     background-color: #F4FDFF; 
     color: #05204A;
+}
+
+/* Selector descendiente */
+#p3 h1 {
+    background-color: #054a3e; 
+    color: #F4FDFF;
+    text-align: center;
+    padding: 20px;
 }
 
 h1 {
@@ -8,6 +22,12 @@ h1 {
     color: #F4FDFF;
     text-align: center;
     padding: 20px;
+}
+
+/* Selector por ID */
+#Deportes {
+    color: white;
+    background-color: #054a3e;
 }
 
 h3 {
@@ -19,16 +39,32 @@ address {
     border: 5px ridge #6F8695;
 }
 
+
 .parraf {
-            color: black;
-            background-color: #F4FDFF;
-            padding: 20px;
-            border: 1px solid #6F8695;
-            border-radius: 10px;
-            width: 1000px;
+    color: black;
+    background-color: #F4FDFF;
+    padding: 20px;
+    border: 1px solid #6F8695;
+    border-radius: 10px;
+    width: 1000px;
+    display: inline-block;
 }
 
-nav {
+/* Selector por hijo directo */
+#ind .parraf > p {
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#ind .parraf + p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+
+
+
+#ind nav {
     background-color: #F4FDFF;
     padding: 15px;
     border: 1px solid #6F8695;
@@ -51,15 +87,16 @@ aside {
     top: 150px; 
 }
 
-.audio {
+/* Selector por atributo */
+#p2 [controls] {
     width: 500px;
-    
 }
 
 form {
     width: 200px;
 }
 
+/* Selector por clase */
 .back {
     border: 1px solid #05204A;
     background-color: #05204A;
